<resources>
    <string name="app_name">About Me</string>
    <string name="done">done</string>
    <string name="nick_name">What is your nick name?</string>
    <string name="name">Dipesh BC</string>
    <string name="star">Dummy Star</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu odio at orci condimentum egestas in non libero. In hendrerit vestibulum iaculis. Cras imperdiet sem ac elit accumsan tempor. Etiam rhoncus ut tortor non ornare. Quisque fringilla ligula sed augue bibendum feugiat. Donec vel arcu a dolor ultrices laoreet ac et erat. Aliquam lacinia nulla risus, in molestie nunc pretium vel. Maecenas vel augue dolor. Sed non diam vitae ex feugiat sollicitudin et ut nibh. Maecenas malesuada pellentesque augue, eu pulvinar mauris porttitor sed. Cras id bibendum tellus. Integer id urna ac neque tempus eleifend. Etiam venenatis nisi sed est laoreet interdum. Pellentesque ac sagittis dui. Sed non metus a neque laoreet ultrices eu vitae tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu odio at orci condimentum egestas in non libero. In hendrerit vestibulum iaculis. C Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu odio at orci condimentum egestas in non libero. In hendrerit vestibulum iaculis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu odio at orci condimentum egestas in non libero. In hendrerit vestibulum iaculis. C Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu odio at orci condimentum egestas in non libero. In hendrerit vestibulum iaculis. C Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu odio at orci condimentum egestas in non libero. In hendrerit vestibulum iaculis. Cv Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu odio at orci condimentum egestas in non libero. In hendrerit vestibulum iaculis. C Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu odio at orci condimentum egestas in non libero. In hendrerit vestibulum iaculis. C Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu odio at orci condimentum egestas in non libero. In hendrerit vestibulum iaculis. CC</string>
</resources>